Fix selected before-node-selector not yet visible whilst mouse is down

--- a/src/JSONNode.scss
+++ b/src/JSONNode.scss
@@ -56,8 +56,10 @@
   &:active {
     .before-node-selector,
     .append-node-selector {
-      .selector {
-        border: none;
+      &:not(.selected) {
+        .selector {
+          border: none;
+        }
       }
     }
   }
